--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 								<h3>PHP</h3>
 								<p>PHP techniques, codes and etc.</p>
 								<ul>
+									<li><a href="compilation/php/Philippine time and date.txt">Phil. Date & Time</a></li>
 									<li><a href="compilation/php/Text Stay after Refresh.txt">Text Stay after Refresh</a></li>
 									<li><a href="compilation/php/checklogin page template.txt">Checklogin Page Template</a></li>
 									<li><a href="compilation/php/security page template.txt">Security Page Template</a></li>
